module12/httpserver/specs/httpserver.yaml
# service
apiVersion: v1
kind: Service
metadata:
  name: httpserver
  namespace: httpserver
  labels:
    app: httpserver
spec:
  selector:
    app: httpserver
  ports:
    - port: 9090
      targetPort: 9090
      name: http-port
---
# Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpserver
  namespace: httpserver
  labels:
    app: httpserver
spec:
  replicas: 3
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: httpserver
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  template:
    metadata:
      labels:
        app: httpserver
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "9090"
    spec:
      terminationGracePeriodSeconds: 30
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: app
                      operator: In
                      values:
                        - httpserver
                topologyKey: kubernetes.io/hostname
              weight: 100
      securityContext:
        runAsUser: 5000
        runAsGroup: 5000
      containers:
        - name: httpserver
          image: limingliang/httpserver:v20.1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9090
          securityContext:
            allowPrivilegeEscalation: false
          resources:
            requests:
              cpu: 300m
              memory: 300Mi
            limits:
              cpu: 300m
              memory: 300Mi
          startupProbe:
            httpGet:
              path: /healthz
              port: 9090
            periodSeconds: 3
            failureThreshold: 10
          livenessProbe:
            httpGet:
              path: /healthz
              port: 9090
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 1
            failureThreshold: 2
          readinessProbe:
            httpGet:
              path: /
              port: 9090
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 1
            failureThreshold: 3
          lifecycle:
            preStop:
              httpGet:
                path: /preStop
                port: 9090
