module12/httpserver/specs/httpserver-istio.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: httpserver
  namespace: httpserver
spec:
  gateways:
    - httpserver
  hosts:
    - lml-cncamp.izaodao.com
  http:
    - match:
      - uri:
          prefix: /httpserver/
      rewrite:
        uri: /
      route:
        - destination:
            host: httpserver.httpserver.svc.cluster.local
            port:
              number: 9090
---
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: httpserver
  namespace: httpserver
spec:
  selector:
    istio: ingressgateway
  servers:
    - hosts:
        - lml-cncamp.izaodao.com
#      port:
#        name: http
#        number: 80
#        protocol: HTTP
      port:
        name: https
        number: 443
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: httpserver-credential
